--- a/mdb-opsmanager/mongodocker/dockerfile
+++ b/mdb-opsmanager/mongodocker/dockerfile
@@ -1,9 +1,3 @@
-#
-# NOTE: THIS DOCKERFILE IS GENERATED VIA "apply-templates.sh"
-#
-# PLEASE DO NOT EDIT IT DIRECTLY.
-#
-
 FROM ubuntu:22.04
 
 # add our user and group first to make sure their IDs get assigned consistently, regardless of whatever dependencies get added
@@ -119,7 +113,7 @@ RUN chmod 400 /data/replicakey && chown 999:999 /data/replicakey
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 COPY limits.conf /etc/security/limits.conf
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+ENTRYPOINT ["entrypoint.sh"]
 
 EXPOSE 27017
 CMD ["mongod"]
