--- a/mdb-opsmanager/opsmanager/dockerfile.opsmanager
+++ b/mdb-opsmanager/opsmanager/dockerfile.opsmanager
@@ -16,7 +16,8 @@ RUN apt-get install -y \
     netcat \
     net-tools \
     sudo \
-    systemctl 
+    systemctl \
+    fontconfig
 
 # Clean up
 # Add a new user (optional)
