--- a/conf-mms.properties
+++ b/conf-mms.properties
@@ -1,6 +1,6 @@
 mms.ignoreInitialUiSetup=true
-mongo.mongoUri=mongodb://appsdb:27017
-mms.centralUrl=http://opsmanager:8080
+mongo.mongoUri=mongodb://root:example@appsdb1:27017
+mms.centralUrl=http://opsmanager1:8080
 mms.fromEmailAddr=example@example.com
 mms.replyToEmailAddr=example@example.com
 mms.adminEmailAddr=example@example.com
