--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
 
   mongo-server1:
-    image: mongoentnew
+    image: pix3lize/mongodbenterprise8
     container_name: appsdb1
     hostname: appsdb1
     ports:
@@ -12,7 +12,7 @@ services:
       DEPLOYMENT: single      
 
   mongo-server2:
-    image: mongoentnew
+    image: pix3lize/mongodbenterprise8
     container_name: appsdb2
     hostname: appsdb2
     volumes: 
@@ -23,7 +23,7 @@ services:
       DEPLOYMENT: script
 
   mongo-server3:
-    image: mongoentnew
+    image: pix3lize/mongodbenterprise8
     container_name: appsdb3
     hostname: appsdb3
     ports:
@@ -32,7 +32,7 @@ services:
       DEPLOYMENT: replicaset
 
   mongo-server4:
-    image: mongoentnew
+    image: pix3lize/mongodbenterprise8
     container_name: appsdb4
     hostname: appsdb4
     ports:
@@ -41,7 +41,8 @@ services:
       DEPLOYMENT: replicaset
 
   ubuntu:
-    image: pix3lize/opsmanagerdocker
+    image: pix3lize/mongodbopsmanager8
+    platform: linux/amd64
     container_name: opsmanager1
     hostname: opsmanager1
     working_dir: /home/mdb    
